--- a/packages/vuetify/src/components/VFooter/VFooter.sass
+++ b/packages/vuetify/src/components/VFooter/VFooter.sass
@@ -9,6 +9,6 @@
   position: relative
 
   // missing from variables @include border($footer-query)
-  @include elevated($footer-elevation)
-  @include position($footer-positions)
-  @include rounded($footer-border-radius)
+  +elevation($footer-elevation)
+  +position($footer-positions)
+  +rounded($footer-border-radius)
