--- a/packages/vuetify/src/components/VMain/_variables.scss
+++ b/packages/vuetify/src/components/VMain/_variables.scss
@@ -1,3 +1,3 @@
 @import '../../styles/styles.sass';
 
-$main-transition: 0.2s map-get($transition, 'fast-out-slow-in') !default;
+$main-transition: 0.2s $standard-easing !default;
