fix(inputs): display title attribute on root element (#12776)
fixes #11253
fixes #12775

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -162,6 +162,7 @@
     &--active
       max-width: 133%
       transform: $text-field-label-active-transform
+      pointer-events: auto // Show title attr on label hover
 
   & > .v-input__control > .v-input__slot
     cursor: text
