feat(VBtn): add sass variables for padding ratio
resolves #10741

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -21,7 +21,7 @@
   vertical-align: $button-vertical-align
 
   @at-root
-    +sizes('v-btn', $button-sizes)
+    +button-sizes()
     +density('v-btn', 'height', $button-density)
 
   +states('.v-btn__overlay')
