--- a/packages/vuetify/src/components/VAvatar/_variables.scss
+++ b/packages/vuetify/src/components/VAvatar/_variables.scss
@@ -1,3 +1,17 @@
 @import '../../styles/styles.sass';
 
 $avatar-border-radius: 50% !default;
+$avatar-line-height: normal !default;
+$avatar-vertical-align: middle !default;
+
+$avatar-sizes: () !default;
+$avatar-sizes: map-deep-merge(
+  (
+    'x-small': 32px,
+    'small': 40px,
+    'default': 48px,
+    'large': 56px,
+    'x-large': 64px,
+  ),
+  $avatar-sizes
+);
