style(border-radius.ts): rename to rounded, re-implement in components
normalized name to rounded throughout, added default rounded support
for all components that implemented this feature

--- a/packages/vuetify/src/components/VAvatar/_variables.scss
+++ b/packages/vuetify/src/components/VAvatar/_variables.scss
@@ -1,7 +1,6 @@
-@import '../../styles/styles.sass';
-
-$avatar-border-radius: 50% !default;
+$avatar-border-radius: map-get($rounded, 'circle') !default;
 $avatar-line-height: normal !default;
+$avatar-rounded-border-radius: $border-radius-root !default;
 $avatar-vertical-align: middle !default;
 
 $avatar-sizes: () !default;
