--- a/packages/vuetify/src/components/VBanner/VBanner.sass
+++ b/packages/vuetify/src/components/VBanner/VBanner.sass
@@ -44,6 +44,9 @@
     &.v-banner--is-mobile
       padding-top: $banner-mobile-padding-top
 
+  &--rounded
+    +rounded($banner-rounded-border-radius)
+
   &--single-line
     padding-top: $banner-single-line-padding-top
 
