--- a/packages/vuetify/src/components/VBanner/_variables.scss
+++ b/packages/vuetify/src/components/VBanner/_variables.scss
@@ -15,6 +15,7 @@ $banner-padding-end: 8px !default;
 $banner-padding-start: 24px !default;
 $banner-padding-top: 16px !default;
 $banner-positions: absolute fixed sticky !default;
+$banner-rounded-border-radius: $border-radius-root !default;
 $banner-single-line-content-padding-bottom: 0 !default;
 $banner-single-line-padding-top: 8px !default;
 $banner-sizer-max-width: 720px !default;
