--- a/packages/vuetify/src/components/VFooter/VFooter.sass
+++ b/packages/vuetify/src/components/VFooter/VFooter.sass
@@ -12,3 +12,6 @@
   +elevation($footer-elevation)
   +position($footer-positions)
   +rounded($footer-border-radius)
+
+  &--rounded
+    +rounded($footer-rounded-border-radius)
