--- a/packages/vuetify/src/components/VNavigationDrawer/_variables.scss
+++ b/packages/vuetify/src/components/VNavigationDrawer/_variables.scss
@@ -17,6 +17,7 @@ $navigation-drawer-img-object-fit: cover !default;
 $navigation-drawer-img-width: inherit !default;
 $navigation-drawer-overflow-scrolling: touch !default;
 $navigation-drawer-positions: absolute fixed !default;
+$navigation-drawer-rounded-border-radius: $border-radius-root !default;
 $navigation-drawer-temporary-elevation: 16 !default;
 $navigation-drawer-transition-duration: 0.2s !default;
 $navigation-drawer-transition-property: box-shadow, transform, visibility, width !default;
