--- a/packages/vuetify/src/components/VSystemBar/VSystemBar.sass
+++ b/packages/vuetify/src/components/VSystemBar/VSystemBar.sass
@@ -31,6 +31,9 @@
   &--lights-out
     background: $system-bar-lights-out-background
 
+  &--rounded
+    +rounded($system-bar-rounded-border-radius)
+
   &--window
     height: $system-bar-window-height
 
