--- a/packages/vuetify/src/components/VAvatar/VAvatar.sass
+++ b/packages/vuetify/src/components/VAvatar/VAvatar.sass
@@ -1,4 +1,4 @@
-@import './_variables.scss'
+@import './index'
 
 .v-avatar
   align-items: center
@@ -11,9 +11,14 @@
   text-align: center
   vertical-align: $avatar-vertical-align
 
+  +rounded($avatar-border-radius)
+
   > *
     border-radius: inherit
     width: inherit
+
+  &--rounded
+    +rounded($avatar-rounded-border-radius)
 
   @each $name in $sizes
     &--size-#{$name}
