style: normalized code styling throughout all v3

--- a/packages/vuetify/src/components/VApp/VApp.sass
+++ b/packages/vuetify/src/components/VApp/VApp.sass
@@ -1,4 +1,4 @@
-@import '../../styles/styles.sass'
+@import './index'
 
 .v-application
   display: flex
@@ -12,7 +12,7 @@
   &--is-rtl
     direction: rtl
 
-  &__wrap
+.v-application__wrap
     flex: 1 1 auto
     backface-visibility: hidden
     display: flex
