--- a/packages/vuetify/src/components/VAvatar/_variables.scss
+++ b/packages/vuetify/src/components/VAvatar/_variables.scss
@@ -1,3 +1,4 @@
+// Defaults
 $avatar-border-radius: map-get($rounded, 'circle') !default;
 $avatar-line-height: normal !default;
 $avatar-rounded-border-radius: $border-radius-root !default;
