--- a/packages/vuetify/src/components/VResponsive/VResponsive.sass
+++ b/packages/vuetify/src/components/VResponsive/VResponsive.sass
@@ -1,23 +1,23 @@
-@import '../../styles/styles.sass'
+@import './index'
 
 .v-responsive
-  position: relative
-  overflow: hidden
+  display: flex
   flex: 1 0 auto
   max-width: 100%
-  display: flex
+  overflow: hidden
+  position: relative
 
-  &__content
-    flex: 1 0 0px
-    max-width: 100%
+.v-responsive__content
+  flex: 1 0 0px
+  max-width: 100%
 
-  &__sizer ~ &__content
-    +ltr()
-      margin-left: -100%
+.v-responsive__sizer ~ &__content
+  +ltr()
+    margin-left: -100%
 
-    +rtl()
-      margin-right: -100%
+  +rtl()
+    margin-right: -100%
 
-  &__sizer
-    transition: padding-bottom 0.2s $standard-easing
-    flex: 1 0 0px
+.v-responsive__sizer
+  flex: 1 0 0px
+  transition: padding-bottom 0.2s $standard-easing
