chore: resolve broken sass

--- a/packages/vuetify/src/components/VResponsive/VResponsive.sass
+++ b/packages/vuetify/src/components/VResponsive/VResponsive.sass
@@ -11,7 +11,7 @@
   flex: 1 0 0px
   max-width: 100%
 
-.v-responsive__sizer ~ &__content
+.v-responsive__sizer ~ .v-responsive__content
   +ltr()
     margin-left: -100%
 
