--- a/packages/vuetify/src/components/VSheet/VSheet.sass
+++ b/packages/vuetify/src/components/VSheet/VSheet.sass
@@ -2,7 +2,7 @@
 @import './index'
 
 .v-sheet
-  +border(...$sheet-border)
+  +border($sheet-border...)
   +elevation($sheet-elevation)
   +position($sheet-positions)
   +rounded($sheet-border-radius)
