fix(VSelect): specify min-height 10px (#13101)
Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -3,6 +3,7 @@
 +theme(v-select) using ($material)
   .v-select__selections
     color: map-deep-get($material, 'text', 'primary')
+    min-height: $select-selections-min-height
 
   &.v-input--is-disabled
     .v-select__selections
