fix(VAlert): reduce icon outline size for dense + prominent props

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -162,6 +162,9 @@
         right: 0
         top: 0
 
+  &.v-alert--dense .v-alert__icon.v-icon::after
+    transform: scale(1)
+
 .v-alert--text
   background: transparent !important
 
