--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -128,6 +128,15 @@
   display: flex
 
 // Modifiers
+.v-alert--border
+  &.v-alert--prominent
+    .v-alert__icon
+      +ltr()
+        margin-left: $alert-border-icon-margin
+
+      +rtl()
+        margin-right: $alert-border-icon-margin
+
 .v-alert--dense
   padding-top: $alert-padding / 2
   padding-bottom: $alert-padding / 2
