feat(display): port to v3 (#13318)
Co-authored-by: Glen <glen.84@gmail.com>
Co-authored-by: Andrew Henry <AMajesticPotatoe@gmail.com>
Co-authored-by: nekosaur <albert@kaaman.nu>
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VBottomSheet/VBottomSheet.sass
+++ b/packages/vuetify/src/components/VBottomSheet/VBottomSheet.sass
@@ -17,7 +17,7 @@
   overflow: visible
 
   &.v-bottom-sheet--inset
-    max-width: $bottom-sheet-inset-width
+    max-width: none
 
-    @media #{map-get($display-breakpoints, 'xs-only')}
-      max-width: none
+    @media #{map-get($display-breakpoints, 'sm-and-up')}
+      max-width: $bottom-sheet-inset-width
