--- a/packages/vuetify/src/components/VStepper/VStepper.sass
+++ b/packages/vuetify/src/components/VStepper/VStepper.sass
@@ -218,6 +218,7 @@
       margin-left: 0
       margin-right: 0
 
+// TODO: use md-and-up
 @media #{map-get($display-breakpoints, 'sm-and-down')}
   .v-stepper:not(.v-stepper--vertical)
     .v-stepper__label
