--- a/packages/vuetify/src/styles/settings/_variables.scss
+++ b/packages/vuetify/src/styles/settings/_variables.scss
@@ -92,8 +92,9 @@ $grid-breakpoints: map-deep-merge(
     'xs': 0,
     'sm': 600px,
     'md': 960px,
-    'lg': 1280px - 16px,
-    'xl': 1920px - 16px
+    'lg': 1280px,
+    'xl': 1920px,
+    'xxl': 2560px,
   ),
   $grid-breakpoints
 );
@@ -111,7 +112,7 @@ $grid-gutters: map-deep-merge(
     'sm': $grid-gutter / 6,
     'md': $grid-gutter / 3,
     'lg': $grid-gutter * 2/3,
-    'xl': $grid-gutter
+    'xl': $grid-gutter,
   ),
   $grid-gutters
 );
@@ -121,27 +122,32 @@ $container-max-widths: map-deep-merge(
   (
     'md': map-get($grid-breakpoints, 'md') * 0.9375,
     'lg': map-get($grid-breakpoints, 'lg') * 0.9375,
-    'xl': map-get($grid-breakpoints, 'xl') * 0.9375
+    'xl': map-get($grid-breakpoints, 'xl') * 0.9375,
+    'xxl': map-get($grid-breakpoints, 'xxl') * 0.9375,
   ),
   $container-max-widths
 );
 
+// Avoid using *-and-down where possible
 $display-breakpoints: () !default;
 $display-breakpoints: map-deep-merge(
   (
     'print-only': 'only print',
     'screen-only': 'only screen',
-    'xs-only': 'only screen and (max-width: #{map-get($grid-breakpoints, 'sm') - 1})',
-    'sm-only': 'only screen and (min-width: #{map-get($grid-breakpoints, 'sm')}) and (max-width: #{map-get($grid-breakpoints, 'md') - 1})',
-    'sm-and-down': 'only screen and (max-width: #{map-get($grid-breakpoints, 'md') - 1})',
-    'sm-and-up': 'only screen and (min-width: #{map-get($grid-breakpoints, 'sm')})',
-    'md-only': 'only screen and (min-width: #{map-get($grid-breakpoints, 'md')}) and (max-width: #{map-get($grid-breakpoints, 'lg') - 1})',
-    'md-and-down': 'only screen and (max-width: #{map-get($grid-breakpoints, 'lg') - 1})',
-    'md-and-up': 'only screen and (min-width: #{map-get($grid-breakpoints, 'md')})',
-    'lg-only': 'only screen and (min-width: #{map-get($grid-breakpoints, 'lg')}) and (max-width: #{map-get($grid-breakpoints, 'xl') - 1})',
-    'lg-and-down': 'only screen and (max-width: #{map-get($grid-breakpoints, 'xl') - 1})',
-    'lg-and-up': 'only screen and (min-width: #{map-get($grid-breakpoints, 'lg')})',
-    'xl-only': 'only screen and (min-width: #{map-get($grid-breakpoints, 'xl')})'
+    'xs': '(max-width: #{map-get($grid-breakpoints, 'sm') - 1})',
+    'sm': '(min-width: #{map-get($grid-breakpoints, 'sm')}) and (max-width: #{map-get($grid-breakpoints, 'md') - 1})',
+    'md': '(min-width: #{map-get($grid-breakpoints, 'md')}) and (max-width: #{map-get($grid-breakpoints, 'lg') - 1})',
+    'lg': '(min-width: #{map-get($grid-breakpoints, 'lg')}) and (max-width: #{map-get($grid-breakpoints, 'xl') - 1})',
+    'xl': '(min-width: #{map-get($grid-breakpoints, 'xl')}) and (max-width: #{map-get($grid-breakpoints, 'xxl') - 1})',
+    'xxl': '(min-width: #{map-get($grid-breakpoints, 'xxl')})',
+    'sm-and-up': '(min-width: #{map-get($grid-breakpoints, 'sm')})',
+    'md-and-up': '(min-width: #{map-get($grid-breakpoints, 'md')})',
+    'lg-and-up': '(min-width: #{map-get($grid-breakpoints, 'lg')})',
+    'xl-and-up': '(min-width: #{map-get($grid-breakpoints, 'xl')})',
+    'sm-and-down': '(max-width: #{map-get($grid-breakpoints, 'md') - 1})',
+    'md-and-down': '(max-width: #{map-get($grid-breakpoints, 'lg') - 1})',
+    'lg-and-down': '(max-width: #{map-get($grid-breakpoints, 'xl') - 1})',
+    'xl-and-down': '(max-width: #{map-get($grid-breakpoints, 'xxl') - 1})',
   ),
   $display-breakpoints
 );
