--- a/packages/vuetify/src/styles/tools/_rtl.sass
+++ b/packages/vuetify/src/styles/tools/_rtl.sass
@@ -1,7 +1,7 @@
 @mixin rtl()
-  .v-application--is-rtl &
+  .v-locale--is-rtl &
     @content
 
 @mixin ltr()
-  .v-application--is-ltr &
+  .v-locale--is-ltr &
     @content
