--- a/packages/vuetify/src/components/VIcon/_variables.scss
+++ b/packages/vuetify/src/components/VIcon/_variables.scss
@@ -1,4 +1,25 @@
 // Defaults
+$icon-btn-size: 1em !default;
+$icon-btn-font-size: (18 / 14) * $icon-btn-size !default;
+$icon-btn-height: $icon-btn-size !default;
+$icon-btn-width: $icon-btn-size !default;
+$icon-btn-margin-start-multiplier: -9 !default;
+$icon-btn-margin-end-multiplier: 4.5 !default;
+$icon-btn-margin-start: var(--v-btn-height) / $icon-btn-margin-start-multiplier !default;
+$icon-btn-margin-end: var(--v-btn-height) / $icon-btn-margin-end-multiplier !default;
+$icon-color-opacity: var(--v-icon-opacity) !default;
+$icon-color: var(--v-theme-on-background) !default;
+$icon-disabled-color-opacity: var(--v-disabled-opacity) !default;
+$icon-disabled-color: var(--v-theme-on-background) !default;
+$icon-left-margin-left: map-get($grid-gutters, 'md') !default;
+$icon-letter-spacing: normal !default;
+$icon-line-height: 1 !default;
+$icon-margin-end: map-get($grid-gutters, 'md') !default;
+$icon-margin-start: map-get($grid-gutters, 'md') !default;
+$icon-text-indent: 0 !default;
+$icon-transition: 0.3s $standard-easing, visibility 0s !default;
+$icon-vertical-align: middle !default;
+
 $icon-sizes: () !default;
 $icon-sizes: map-deep-merge(
   (
