--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -15,8 +15,9 @@
   text-decoration: none
   text-indent: $button-text-letter-spacing
   text-transform: $button-text-transform
-  transition-property: box-shadow, transform, opacity
-  transition: 0.28s $standard-easing
+  transition-property: box-shadow, transform, opacity, color
+  transition-duration: 0.28s
+  transition-timing-function: $standard-easing
   user-select: none
   vertical-align: $button-vertical-align
 
