feat(styles): move theme-overlay-multiplier variable to :root

--- a/packages/vuetify/src/styles/elements/_global.sass
+++ b/packages/vuetify/src/styles/elements/_global.sass
@@ -11,6 +11,9 @@ html
 html.overflow-y-hidden
   overflow-y: hidden !important
 
+:root
+  --v-theme-overlay-multiplier: 1
+
 // iOS Safari hack to allow click events on body
 @supports (-webkit-touch-callout: none)
   body
