--- a/packages/vuetify/src/components/VBottomNavigation/_variables.scss
+++ b/packages/vuetify/src/components/VBottomNavigation/_variables.scss
@@ -1,6 +1,6 @@
 @import '../../styles/styles.sass';
 
-$bottom-nav-btn-font-size: map-deep-get($headings, 'caption', 'size') !default;
+$bottom-nav-btn-font-size: map-deep-get($typography, 'caption', 'size') !default;
 $bottom-nav-btn-min-width: 80px !default;
 $bottom-nav-btn-max-width: 168px !default;
 $bottom-nav-shift-btn-top: calc(100% - 12px) !default;
