--- a/packages/vuetify/src/components/VBtn/_variables.scss
+++ b/packages/vuetify/src/components/VBtn/_variables.scss
@@ -6,8 +6,8 @@ $button-border-width: thin !default;
 $button-disabled-opacity: 0.26 !default;
 $button-disabled-overlay: 0.12 !default;
 $button-elevation: ('default': 2, 'hover': 4, 'active': 8) !default;
-$button-font-size: map-deep-get($headings, 'button', 'size') !default;
-$button-font-weight: map-deep-get($headings, 'button', 'weight') !default;
+$button-font-size: map-deep-get($typography, 'button', 'size') !default;
+$button-font-weight: map-deep-get($typography, 'button', 'weight') !default;
 $button-height: 36px !default;
 $button-icon-border-radius: map-get($rounded, 'circle') !default;
 $button-icon-font-size: 24px !default;
@@ -15,8 +15,8 @@ $button-icon-size: 48px !default;
 $button-line-height: normal !default;
 $button-padding-ratio: 2.25 !default;
 $button-positions: absolute fixed !default;
-$button-text-letter-spacing: map-deep-get($headings, 'button', 'letter-spacing') !default;
-$button-text-transform: map-deep-get($headings, 'button', 'text-transform') !default;
+$button-text-letter-spacing: map-deep-get($typography, 'button', 'letter-spacing') !default;
+$button-text-transform: map-deep-get($typography, 'button', 'text-transform') !default;
 $button-vertical-align: middle !default;
 $button-width-ratio: 16/9 !default;
 
