--- a/packages/vuetify/src/components/VCard/_variables.scss
+++ b/packages/vuetify/src/components/VCard/_variables.scss
@@ -15,15 +15,15 @@ $card-overflow-wrap: break-word !default;
 $card-raised-elevation: 8 !default;
 $card-shaped-border-radius: map-get($rounded, 'xl') $card-border-radius !default;
 $card-subtitle-padding: 16px !default;
-$card-text-font-size: map-deep-get($headings, 'subtitle-2', 'size') !default;
+$card-text-font-size: map-deep-get($typography, 'subtitle-2', 'size') !default;
 $card-text-font-weight: 400 !default;
-$card-text-letter-spacing: map-deep-get($headings, 'subtitle-2', 'letter-spacing') !default;
-$card-text-line-height: map-deep-get($headings, 'subtitle-2', 'line-height') !default;
+$card-text-letter-spacing: map-deep-get($typography, 'subtitle-2', 'letter-spacing') !default;
+$card-text-line-height: map-deep-get($typography, 'subtitle-2', 'line-height') !default;
 $card-title-adjacent-sibling-subtitle-margin-top: -16px !default;
 $card-title-adjacent-sibling-subtitle-text-padding-top: 0 !default;
-$card-title-font-size: map-deep-get($headings, 'h6', 'size') !default;
-$card-title-font-weight: map-deep-get($headings, 'h6', 'weight') !default;
-$card-title-letter-spacing: map-deep-get($headings, 'h6', 'letter-spacing') !default;
-$card-title-line-height: map-deep-get($headings, 'h6', 'line-height') !default;
+$card-title-font-size: map-deep-get($typography, 'h6', 'size') !default;
+$card-title-font-weight: map-deep-get($typography, 'h6', 'weight') !default;
+$card-title-letter-spacing: map-deep-get($typography, 'h6', 'letter-spacing') !default;
+$card-title-line-height: map-deep-get($typography, 'h6', 'line-height') !default;
 $card-title-word-break: break-all !default;
 $card-white-space: normal !default;
