--- a/packages/vuetify/src/components/VSnackbar/_variables.scss
+++ b/packages/vuetify/src/components/VSnackbar/_variables.scss
@@ -7,12 +7,12 @@ $snackbar-border-radius: $border-radius-root !default;
 $snackbar-bottom: 0 !default;
 $snackbar-btn-padding: 0 8px !default;
 $snackbar-color: hsla(0, 0%, 100%, .87) !default;
-$snackbar-content-font-size: map-deep-get($headings, 'body-2', 'size') !default;
-$snackbar-content-font-weight: map-deep-get($headings, 'body-2', 'weight') !default;
-$snackbar-content-letter-spacing: map-deep-get($headings, 'body-2', 'letter-spacing') !default;
-$snackbar-content-line-height: map-deep-get($headings, 'body-2', 'line-height') !default;
+$snackbar-content-font-size: map-deep-get($typography, 'body-2', 'size') !default;
+$snackbar-content-font-weight: map-deep-get($typography, 'body-2', 'weight') !default;
+$snackbar-content-letter-spacing: map-deep-get($typography, 'body-2', 'letter-spacing') !default;
+$snackbar-content-line-height: map-deep-get($typography, 'body-2', 'line-height') !default;
 $snackbar-content-padding: 14px 16px !default;
-$snackbar-content-text-transform: map-deep-get($headings, 'body-2', 'text-transform') !default;
+$snackbar-content-text-transform: map-deep-get($typography, 'body-2', 'text-transform') !default;
 $snackbar-elevation: 6 !default;
 $snackbar-left: 0 !default;
 $snackbar-multi-line-wrapper-min-height: 68px !default;
