--- a/packages/vuetify/src/components/VStepper/_variables.scss
+++ b/packages/vuetify/src/components/VStepper/_variables.scss
@@ -11,14 +11,14 @@ $stepper-header-divider-margin: 0 -16px !default;
 $stepper-header-elevation: 2 !default;
 $stepper-header-height: 72px !default;
 $stepper-label-line-height: 1 !default;
-$stepper-label-small-font-size: map-deep-get($headings, 'caption', 'size') !default;
+$stepper-label-small-font-size: map-deep-get($typography, 'caption', 'size') !default;
 $stepper-label-small-font-weight: 300 !default;
 $stepper-shaped-border-radius: map-get($rounded, 'xl') $stepper-border-radius !default;
-$stepper-step-error-icon-font-size: map-deep-get($headings, 'h5', 'size')  !default;
+$stepper-step-error-icon-font-size: map-deep-get($typography, 'h5', 'size')  !default;
 $stepper-step-padding: 24px !default;
-$stepper-step-step-font-size: map-deep-get($headings, 'caption', 'size') !default;
+$stepper-step-step-font-size: map-deep-get($typography, 'caption', 'size') !default;
 $stepper-step-step-height: 24px !default;
-$stepper-step-step-icon-font-size: map-deep-get($headings, 'h6', 'size') !default;
+$stepper-step-step-icon-font-size: map-deep-get($typography, 'h6', 'size') !default;
 $stepper-step-step-margin: 8px !default;
 $stepper-step-step-min-width: 24px !default;
 $stepper-step-step-width: 24px !default;
