--- a/packages/vuetify/src/components/VSubheader/VSubheader.sass
+++ b/packages/vuetify/src/components/VSubheader/VSubheader.sass
@@ -7,8 +7,8 @@
   align-items: center
   display: flex
   height: $subheader-item-single-height
-  font-size: map-deep-get($headings, 'body-2', 'size')
-  font-weight: map-deep-get($headings, 'body-2', 'weight')
+  font-size: map-deep-get($typography, 'body-2', 'size')
+  font-weight: map-deep-get($typography, 'body-2', 'weight')
   padding: 0 $subheader-right-padding 0 $subheader-left-padding
 
   &--inset
