--- a/packages/vuetify/src/components/VSystemBar/_variables.scss
+++ b/packages/vuetify/src/components/VSystemBar/_variables.scss
@@ -4,8 +4,8 @@ $system-bar-border-radius: map-get($rounded, 0) !default;
 $system-bar-icon-color: rgba(var(--v-theme-on-background), 0.50) !default;
 $system-bar-elevation: 0 !default;
 $system-bar-flex: 1 1 auto !default;
-$system-bar-font-size: map-deep-get($headings, 'body-1', 'size') !default;
-$system-bar-font-weight: map-deep-get($headings, 'body-1', 'weight') !default;
+$system-bar-font-size: map-deep-get($typography, 'body-1', 'size') !default;
+$system-bar-font-weight: map-deep-get($typography, 'body-1', 'weight') !default;
 $system-bar-height: 24px !default;
 $system-bar-icon-font-size: 16px !default;
 $system-bar-lights-out-background: rgba(var(--v-theme-background), 0.7) !default;
