--- a/packages/vuetify/src/components/VPagination/_variables.scss
+++ b/packages/vuetify/src/components/VPagination/_variables.scss
@@ -2,7 +2,7 @@
 
 $pagination-border-radius: $border-radius-root !default;
 $pagination-disabled-opacity: 0.6 !default;
-$pagination-item-font-size: map-deep-get($headings, 'subtitle-1', 'size') !default;
+$pagination-item-font-size: map-deep-get($typography, 'subtitle-1', 'size') !default;
 $pagination-item-height: 34px !default;
 $pagination-item-margin: .3rem !default;
 $pagination-item-min-width: 34px !default;
