--- a/packages/vuetify/src/components/VSheet/VSheet.sass
+++ b/packages/vuetify/src/components/VSheet/VSheet.sass
@@ -7,5 +7,8 @@
   +position($sheet-positions)
   +rounded($sheet-border-radius)
 
+  &--border
+    border-width: $sheet-border-thin-width
+
   &--rounded
     +rounded($sheet-rounded-border-radius)
