--- a/packages/vuetify/src/components/VSheet/_variables.scss
+++ b/packages/vuetify/src/components/VSheet/_variables.scss
@@ -1,11 +1,12 @@
 // Defaults
 $sheet-border-color: $border-color-root !default;
-$sheet-border-style: $border-style-root !default;
 $sheet-border-radius: 0 !default;
-$sheet-rounded-border-radius: $border-radius-root !default;
+$sheet-border-style: $border-style-root !default;
+$sheet-border-thin-width: thin !default;
 $sheet-border-width: 0 !default;
 $sheet-elevation: 0 !default;
 $sheet-positions: absolute fixed !default;
+$sheet-rounded-border-radius: $border-radius-root !default;
 
 $sheet-border: (
   $sheet-border-color,
